<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raph_fw</name>
  <version>1.1.1</version>
  <description>Binary releases of the RaphCore firmware and related utilities</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-rich</exec_depend>
  <exec_depend>python3-zeroconf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
