<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raph_bringup</name>
  <version>1.0.0</version>
  <description>
    Scripts and launch files for starting basic Raph Rover functionalities. 
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>compressed_depth_image_transport</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>rosapi</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <exec_depend>raph_description</exec_depend>
  <exec_depend>raph_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>
