<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raph_robot</name>
  <version>1.0.0</version>
  <description>Packages for Raph Rover running on the robot.</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  
  <license>MIT</license>

  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>raph</exec_depend>  
  <exec_depend>raph_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
